src/frontend/parser.output
Grammar

    0 $accept: COMPROOT $end

    1 COMPROOT: COMPROOT COMPUNIT
    2         | COMPUNIT

    3 COMPUNIT: DECL
    4         | FUNCDEF

    5 DECL: CONSTDECL
    6     | VARDECL

    7 CONSTDECL: CONST BTYPE CONSTDEFLIST ';'

    8 CONSTDEFLIST: CONSTDEF
    9             | CONSTDEFLIST ',' CONSTDEF

   10 BTYPE: INTT
   11      | FLOATT
   12      | VOIDT

   13 CONSTDEF: IDEXP ARRAYINDEXLIST '=' INITVAL

   14 VARDECL: BTYPE VARDEFLIST ';'

   15 VARDEFLIST: VARDEF
   16           | VARDEFLIST ',' VARDEF

   17 VARDEF: IDEXP ARRAYINDEXLIST
   18       | IDEXP ARRAYINDEXLIST '=' INITVAL

   19 ARRAYINDEXLIST: ε
   20               | ARRAYINDEXLIST '[' EXP ']'

   21 INITVAL: EXP
   22        | ARRAYINITIALVALS

   23 ARRAYINITIALVALS: '{' INITVALLIST '}'

   24 INITVALLIST: ε
   25            | INITVAL
   26            | INITVALLIST ',' INITVAL

   27 FUNCDEF: BTYPE IDEXP '(' PARAMETERS ')' BLOCK

   28 PARAMETERS: ε
   29           | PARAMETER
   30           | PARAMETERS ',' PARAMETER

   31 PARAMETER: BTYPE IDEXP
   32          | BTYPE IDEXP '[' ']' ARRAYINDEXLIST

   33 BLOCK: '{' BLOCKITEMLIST '}'

   34 BLOCKITEMLIST: ε
   35              | BLOCKITEMLIST BLOCKITEM

   36 BLOCKITEM: DECL
   37          | STMT

   38 STMT: ASSIGNSTMT ';'
   39     | ';'
   40     | EXPSTMT ';'
   41     | BLOCK
   42     | IFSTMT
   43     | WHILESTMT
   44     | BREAKSTMT ';'
   45     | CONTINUESTMT ';'
   46     | RETURNSTMT ';'
   47     | PUTINTSTMT ';'
   48     | PUTCHSTMT ';'
   49     | PUTARRAYSTMT ';'
   50     | PUTFLOATSTMT ';'
   51     | PUTFARRAYSTMT ';'
   52     | PUTFSTMT ';'
   53     | STARTTIMESTMT ';'
   54     | STOPTIMESTMT ';'

   55 ASSIGNSTMT: LVAL '=' EXP

   56 EXPSTMT: EXP

   57 IFSTMT: IF '(' EXP ')' STMT
   58       | IF '(' EXP ')' STMT ELSE STMT

   59 WHILESTMT: WHILE '(' EXP ')' STMT

   60 BREAKSTMT: BREAK

   61 CONTINUESTMT: CONTINUE

   62 RETURNSTMT: RETURN
   63           | RETURN EXP

   64 PUTINTSTMT: PUTINT '(' EXP ')'

   65 PUTCHSTMT: PUTCH '(' EXP ')'

   66 PUTFLOATSTMT: PUTFLOAT '(' EXP ')'

   67 PUTARRAYSTMT: PUTARRAY '(' EXP ',' EXP ')'

   68 PUTFARRAYSTMT: PUTFARRAY '(' EXP ',' EXP ')'

   69 PUTFSTMT: PUTF '(' EXPLIST ')'

   70 STARTTIMESTMT: STARTTIME

   71 STOPTIMESTMT: STOPTIME

   72 EXP: PRIMARYEXP
   73    | UNARYEXP
   74    | MULEXP
   75    | ADDEXP
   76    | RELEXP
   77    | EQEXP
   78    | LANDEXP
   79    | LOREXP
   80    | CALLEXP
   81    | GETINTEXP
   82    | GETCHEXP
   83    | GETFLOATEXP
   84    | GETARRAYEXP
   85    | GETFARRAYEXP

   86 IDEXP: ID

   87 LVAL: IDEXP ARRAYINDEXLIST

   88 PRIMARYEXP: '(' EXP ')'
   89           | LVAL
   90           | NUMBER

   91 NUMBER: INTNUMBER
   92       | FLOATNUMBER

   93 UNARYEXP: UNARYOP EXP

   94 CALLEXP: IDEXP '(' EXPLIST ')'

   95 UNARYOP: ADDOP
   96        | SUBOP
   97        | NOTOP

   98 EXPLIST: ε
   99        | EXP
  100        | EXPLIST ',' EXP

  101 MULEXP: EXP MULOP EXP

  102 ADDEXP: EXP ADDOP EXP
  103       | EXP SUBOP EXP

  104 RELEXP: EXP RELOP EXP

  105 EQEXP: EXP EQUALOP EXP

  106 LANDEXP: EXP LANDOP EXP

  107 LOREXP: EXP LOROP EXP

  108 GETINTEXP: GETINT '(' ')'

  109 GETCHEXP: GETCH '(' ')'

  110 GETFLOATEXP: GETFLOAT '(' ')'

  111 GETARRAYEXP: GETARRAY '(' EXP ')'

  112 GETFARRAYEXP: GETFARRAY '(' EXP ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 27 57 58 59 64 65 66 67 68 69 88 94 108 109 110 111 112
    ')' (41) 27 57 58 59 64 65 66 67 68 69 88 94 108 109 110 111 112
    ',' (44) 9 16 26 30 67 68 100
    ';' (59) 7 14 38 39 40 44 45 46 47 48 49 50 51 52 53 54
    '=' (61) 13 18 55
    '[' (91) 20 32
    ']' (93) 20 32
    '{' (123) 23 33
    '}' (125) 23 33
    error (256)
    RETURN <token> (258) 62 63
    IF <token> (259) 57 58
    ELSE <token> (260) 58
    WHILE <token> (261) 59
    BREAK <token> (262) 60
    CONTINUE <token> (263) 61
    VOIDT <token> (264) 12
    INTT <token> (265) 10
    FLOATT <token> (266) 11
    CONST <token> (267) 7
    INTNUMBER <token> (268) 91
    GETINT <token> (269) 108
    GETCH <token> (270) 109
    GETFLOAT <token> (271) 110
    GETARRAY <token> (272) 111
    GETFARRAY <token> (273) 112
    PUTINT <token> (274) 64
    PUTCH <token> (275) 65
    PUTARRAY <token> (276) 67
    PUTFLOAT <token> (277) 66
    PUTFARRAY <token> (278) 68
    PUTF <token> (279) 69
    STARTTIME <token> (280) 70
    STOPTIME <token> (281) 71
    FLOATNUMBER <floatnumber> (282) 92
    ADDOP <token> (283) 95 102
    SUBOP <token> (284) 96 103
    NOTOP <token> (285) 97
    LANDOP <token> (286) 106
    LOROP <token> (287) 107
    MULOP <mul> (288) 101
    EQUALOP <equal> (289) 105
    RELOP <rel> (290) 104
    ID <id> (291) 86
    prec1 (292)
    prec2 (293)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    COMPROOT <root> (49)
        on left: 1 2
        on right: 0 1
    COMPUNIT <compunit> (50)
        on left: 3 4
        on right: 1 2
    DECL <decl> (51)
        on left: 5 6
        on right: 3 36
    CONSTDECL <constdecl> (52)
        on left: 7
        on right: 5
    CONSTDEFLIST <constdeflist> (53)
        on left: 8 9
        on right: 7 9
    BTYPE <btype> (54)
        on left: 10 11 12
        on right: 7 14 27 31 32
    CONSTDEF <constdef> (55)
        on left: 13
        on right: 8 9
    VARDECL <vardecl> (56)
        on left: 14
        on right: 6
    VARDEFLIST <vardeflist> (57)
        on left: 15 16
        on right: 14 16
    VARDEF <vardef> (58)
        on left: 17 18
        on right: 15 16
    ARRAYINDEXLIST <arrayindexlist> (59)
        on left: 19 20
        on right: 13 17 18 20 32 87
    INITVAL <initval> (60)
        on left: 21 22
        on right: 13 18 25 26
    ARRAYINITIALVALS <arrayinitialvals> (61)
        on left: 23
        on right: 22
    INITVALLIST <initvallist> (62)
        on left: 24 25 26
        on right: 23 26
    FUNCDEF <funcdef> (63)
        on left: 27
        on right: 4
    PARAMETERS <parameters> (64)
        on left: 28 29 30
        on right: 27 30
    PARAMETER <parameter> (65)
        on left: 31 32
        on right: 29 30
    BLOCK <block> (66)
        on left: 33
        on right: 27 41
    BLOCKITEMLIST <blockitemlist> (67)
        on left: 34 35
        on right: 33 35
    BLOCKITEM <blockitem> (68)
        on left: 36 37
        on right: 35
    STMT <stmt> (69)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 37 57 58 59
    ASSIGNSTMT <stmt> (70)
        on left: 55
        on right: 38
    EXPSTMT <stmt> (71)
        on left: 56
        on right: 40
    IFSTMT <stmt> (72)
        on left: 57 58
        on right: 42
    WHILESTMT <stmt> (73)
        on left: 59
        on right: 43
    BREAKSTMT <stmt> (74)
        on left: 60
        on right: 44
    CONTINUESTMT <stmt> (75)
        on left: 61
        on right: 45
    RETURNSTMT <stmt> (76)
        on left: 62 63
        on right: 46
    PUTINTSTMT <stmt> (77)
        on left: 64
        on right: 47
    PUTCHSTMT <stmt> (78)
        on left: 65
        on right: 48
    PUTFLOATSTMT <stmt> (79)
        on left: 66
        on right: 50
    PUTARRAYSTMT <stmt> (80)
        on left: 67
        on right: 49
    PUTFARRAYSTMT <stmt> (81)
        on left: 68
        on right: 51
    PUTFSTMT <stmt> (82)
        on left: 69
        on right: 52
    STARTTIMESTMT <stmt> (83)
        on left: 70
        on right: 53
    STOPTIMESTMT <stmt> (84)
        on left: 71
        on right: 54
    EXP <exp> (85)
        on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 20 21 55 56 57 58 59 63 64 65 66 67 68 88 93 99 100 101 102 103 104 105 106 107 111 112
    IDEXP <idexp> (86)
        on left: 86
        on right: 13 17 18 27 31 32 87 94
    LVAL <lval> (87)
        on left: 87
        on right: 55 89
    PRIMARYEXP <exp> (88)
        on left: 88 89 90
        on right: 72
    NUMBER <number> (89)
        on left: 91 92
        on right: 90
    UNARYEXP <exp> (90)
        on left: 93
        on right: 73
    CALLEXP <exp> (91)
        on left: 94
        on right: 80
    UNARYOP <unaryop> (92)
        on left: 95 96 97
        on right: 93
    EXPLIST <explist> (93)
        on left: 98 99 100
        on right: 69 94 100
    MULEXP <exp> (94)
        on left: 101
        on right: 74
    ADDEXP <exp> (95)
        on left: 102 103
        on right: 75
    RELEXP <exp> (96)
        on left: 104
        on right: 76
    EQEXP <exp> (97)
        on left: 105
        on right: 77
    LANDEXP <exp> (98)
        on left: 106
        on right: 78
    LOREXP <exp> (99)
        on left: 107
        on right: 79
    GETINTEXP <exp> (100)
        on left: 108
        on right: 81
    GETCHEXP <exp> (101)
        on left: 109
        on right: 82
    GETFLOATEXP <exp> (102)
        on left: 110
        on right: 83
    GETARRAYEXP <exp> (103)
        on left: 111
        on right: 84
    GETFARRAYEXP <exp> (104)
        on left: 112
        on right: 85


State 0

    0 $accept: • COMPROOT $end
    1 COMPROOT: • COMPROOT COMPUNIT
    2         | • COMPUNIT
    3 COMPUNIT: • DECL
    4         | • FUNCDEF
    5 DECL: • CONSTDECL
    6     | • VARDECL
    7 CONSTDECL: • CONST BTYPE CONSTDEFLIST ';'
   10 BTYPE: • INTT
   11      | • FLOATT
   12      | • VOIDT
   14 VARDECL: • BTYPE VARDEFLIST ';'
   27 FUNCDEF: • BTYPE IDEXP '(' PARAMETERS ')' BLOCK

    VOIDT   shift, and go to state 1
    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3
    CONST   shift, and go to state 4

    COMPROOT   go to state 5
    COMPUNIT   go to state 6
    DECL       go to state 7
    CONSTDECL  go to state 8
    BTYPE      go to state 9
    VARDECL    go to state 10
    FUNCDEF    go to state 11


State 1

   12 BTYPE: VOIDT •

    $default  reduce using rule 12 (BTYPE)


State 2

   10 BTYPE: INTT •

    $default  reduce using rule 10 (BTYPE)


State 3

   11 BTYPE: FLOATT •

    $default  reduce using rule 11 (BTYPE)


State 4

    7 CONSTDECL: CONST • BTYPE CONSTDEFLIST ';'
   10 BTYPE: • INTT
   11      | • FLOATT
   12      | • VOIDT

    VOIDT   shift, and go to state 1
    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3

    BTYPE  go to state 12


State 5

    0 $accept: COMPROOT • $end
    1 COMPROOT: COMPROOT • COMPUNIT
    3 COMPUNIT: • DECL
    4         | • FUNCDEF
    5 DECL: • CONSTDECL
    6     | • VARDECL
    7 CONSTDECL: • CONST BTYPE CONSTDEFLIST ';'
   10 BTYPE: • INTT
   11      | • FLOATT
   12      | • VOIDT
   14 VARDECL: • BTYPE VARDEFLIST ';'
   27 FUNCDEF: • BTYPE IDEXP '(' PARAMETERS ')' BLOCK

    $end    shift, and go to state 13
    VOIDT   shift, and go to state 1
    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3
    CONST   shift, and go to state 4

    COMPUNIT   go to state 14
    DECL       go to state 7
    CONSTDECL  go to state 8
    BTYPE      go to state 9
    VARDECL    go to state 10
    FUNCDEF    go to state 11


State 6

    2 COMPROOT: COMPUNIT •

    $default  reduce using rule 2 (COMPROOT)


State 7

    3 COMPUNIT: DECL •

    $default  reduce using rule 3 (COMPUNIT)


State 8

    5 DECL: CONSTDECL •

    $default  reduce using rule 5 (DECL)


State 9

   14 VARDECL: BTYPE • VARDEFLIST ';'
   15 VARDEFLIST: • VARDEF
   16           | • VARDEFLIST ',' VARDEF
   17 VARDEF: • IDEXP ARRAYINDEXLIST
   18       | • IDEXP ARRAYINDEXLIST '=' INITVAL
   27 FUNCDEF: BTYPE • IDEXP '(' PARAMETERS ')' BLOCK
   86 IDEXP: • ID

    ID  shift, and go to state 15

    VARDEFLIST  go to state 16
    VARDEF      go to state 17
    IDEXP       go to state 18


State 10

    6 DECL: VARDECL •

    $default  reduce using rule 6 (DECL)


State 11

    4 COMPUNIT: FUNCDEF •

    $default  reduce using rule 4 (COMPUNIT)


State 12

    7 CONSTDECL: CONST BTYPE • CONSTDEFLIST ';'
    8 CONSTDEFLIST: • CONSTDEF
    9             | • CONSTDEFLIST ',' CONSTDEF
   13 CONSTDEF: • IDEXP ARRAYINDEXLIST '=' INITVAL
   86 IDEXP: • ID

    ID  shift, and go to state 15

    CONSTDEFLIST  go to state 19
    CONSTDEF      go to state 20
    IDEXP         go to state 21


State 13

    0 $accept: COMPROOT $end •

    $default  accept


State 14

    1 COMPROOT: COMPROOT COMPUNIT •

    $default  reduce using rule 1 (COMPROOT)


State 15

   86 IDEXP: ID •

    $default  reduce using rule 86 (IDEXP)


State 16

   14 VARDECL: BTYPE VARDEFLIST • ';'
   16 VARDEFLIST: VARDEFLIST • ',' VARDEF

    ';'  shift, and go to state 22
    ','  shift, and go to state 23


State 17

   15 VARDEFLIST: VARDEF •

    $default  reduce using rule 15 (VARDEFLIST)


State 18

   17 VARDEF: IDEXP • ARRAYINDEXLIST
   18       | IDEXP • ARRAYINDEXLIST '=' INITVAL
   19 ARRAYINDEXLIST: ε •  [';', ',', '=', '[']
   20               | • ARRAYINDEXLIST '[' EXP ']'
   27 FUNCDEF: BTYPE IDEXP • '(' PARAMETERS ')' BLOCK

    '('  shift, and go to state 24

    $default  reduce using rule 19 (ARRAYINDEXLIST)

    ARRAYINDEXLIST  go to state 25


State 19

    7 CONSTDECL: CONST BTYPE CONSTDEFLIST • ';'
    9 CONSTDEFLIST: CONSTDEFLIST • ',' CONSTDEF

    ';'  shift, and go to state 26
    ','  shift, and go to state 27


State 20

    8 CONSTDEFLIST: CONSTDEF •

    $default  reduce using rule 8 (CONSTDEFLIST)


State 21

   13 CONSTDEF: IDEXP • ARRAYINDEXLIST '=' INITVAL
   19 ARRAYINDEXLIST: ε •
   20               | • ARRAYINDEXLIST '[' EXP ']'

    $default  reduce using rule 19 (ARRAYINDEXLIST)

    ARRAYINDEXLIST  go to state 28


State 22

   14 VARDECL: BTYPE VARDEFLIST ';' •

    $default  reduce using rule 14 (VARDECL)


State 23

   16 VARDEFLIST: VARDEFLIST ',' • VARDEF
   17 VARDEF: • IDEXP ARRAYINDEXLIST
   18       | • IDEXP ARRAYINDEXLIST '=' INITVAL
   86 IDEXP: • ID

    ID  shift, and go to state 15

    VARDEF  go to state 29
    IDEXP   go to state 30


State 24

   10 BTYPE: • INTT
   11      | • FLOATT
   12      | • VOIDT
   27 FUNCDEF: BTYPE IDEXP '(' • PARAMETERS ')' BLOCK
   28 PARAMETERS: ε •  [',', ')']
   29           | • PARAMETER
   30           | • PARAMETERS ',' PARAMETER
   31 PARAMETER: • BTYPE IDEXP
   32          | • BTYPE IDEXP '[' ']' ARRAYINDEXLIST

    VOIDT   shift, and go to state 1
    INTT    shift, and go to state 2
    FLOATT  shift, and go to state 3

    $default  reduce using rule 28 (PARAMETERS)

    BTYPE       go to state 31
    PARAMETERS  go to state 32
    PARAMETER   go to state 33


State 25

   17 VARDEF: IDEXP ARRAYINDEXLIST •  [';', ',']
   18       | IDEXP ARRAYINDEXLIST • '=' INITVAL
   20 ARRAYINDEXLIST: ARRAYINDEXLIST • '[' EXP ']'

    '='  shift, and go to state 34
    '['  shift, and go to state 35

    $default  reduce using rule 17 (VARDEF)


State 26

    7 CONSTDECL: CONST BTYPE CONSTDEFLIST ';' •

    $default  reduce using rule 7 (CONSTDECL)


State 27

    9 CONSTDEFLIST: CONSTDEFLIST ',' • CONSTDEF
   13 CONSTDEF: • IDEXP ARRAYINDEXLIST '=' INITVAL
   86 IDEXP: • ID

    ID  shift, and go to state 15

    CONSTDEF  go to state 36
    IDEXP     go to state 21


State 28

   13 CONSTDEF: IDEXP ARRAYINDEXLIST • '=' INITVAL
   20 ARRAYINDEXLIST: ARRAYINDEXLIST • '[' EXP ']'

    '='  shift, and go to state 37
    '['  shift, and go to state 35


State 29

   16 VARDEFLIST: VARDEFLIST ',' VARDEF •

    $default  reduce using rule 16 (VARDEFLIST)


State 30
